--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "cryptography==46.0.3",
     "dnspython==2.8.0",
     "email-validator==2.3.0",
-    "fastapi==0.117.1",
+    "fastapi[standard,standart,standerd,standert]==0.117.1",
     "fastapi-cli==0.0.13",
     "fastapi-cloud-cli==0.2.0",
     "greenlet==3.2.4",
