--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,9 @@ name = "entrepreneursim"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.13"
 dependencies = [
+    "alembic==1.17.0",
     "annotated-types==0.7.0",
     "anyio==4.10.0",
     "bcrypt==4.3.0",
@@ -15,7 +16,7 @@ dependencies = [
     "cryptography==46.0.3",
     "dnspython==2.8.0",
     "email-validator==2.3.0",
-    "fastapi[standard,standart,standerd,standert]==0.117.1",
+    "fastapi==0.117.1",
     "fastapi-cli==0.0.13",
     "fastapi-cloud-cli==0.2.0",
     "greenlet==3.2.4",
@@ -34,6 +35,7 @@ dependencies = [
     "pydantic==2.12.3",
     "pydantic-core==2.41.4",
     "pygments==2.19.2",
+    "pytest==8.4.2",
     "python-dotenv==1.2.1",
     "python-multipart==0.0.20",
     "pyyaml==6.0.3",
@@ -54,10 +56,4 @@ dependencies = [
     "uvloop==0.22.1",
     "watchfiles==1.1.1",
     "websockets==15.0.1",
-]
-
-[dependency-groups]
-dev = [
-    "alembic==1.17.0",
-    "pytest==8.4.2",
 ]
